src/deploy/kubernetes/infra/06_addons/istio/03_rules/network-policy/templates/sidecar-policy-tenant-0.yml
#curl http://callee-service-application.example-tenant-5a2f:8080/actuator/health
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: example-tenant-0-sidecar-policy
  namespace: example-tenant-0
spec:
  egress:
    - hosts:
        - ./*
        - istio-system/*
        - monitoring/*
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
