src/deploy/kubernetes/infra/06_addons/istio/03_rules/network-policy/templates/sidecar-policy-tenant-5a2f.yml
#curl http://callee-service-application.example-tenant-0:8080/actuator/health

apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: example-tenant-5a2f-sidecar-policy
  namespace: example-tenant-5a2f
spec:
  egress:
    - hosts:
        - ./*
        - istio-system/*
        - monitoring/*
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
