src/deploy/kubernetes/infra/06_addons/istio/03_rules/network-policy/templates/sidecar-policy.yml
#https://banzaicloud.com/blog/istio-sidecar/
#https://medium.com/geekculture/watch-out-for-this-istio-proxy-sidecar-memory-pitfall-8dbd99ea7e9d
#curl http://callee-service-application.example-tenant-5a2f:8080/actuator/health
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: default
  namespace: example-tenant-0
spec:
  egress:
    - hosts:
        - ./*
        - istio-system/*
